--- a/ErkutPrefabrik/wwwroot/css/style-starter.css
+++ b/ErkutPrefabrik/wwwroot/css/style-starter.css
@@ -19710,7 +19710,7 @@ p.vhny-para {
 /*--//video--*/
 /*--/inner-banner--*/
 .inner-banner {
-    background: url(../images/banner2.jpg) no-repeat center;
+    background: url(../images/banner.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
