--- a/ErkutPrefabrik/Views/Shared/_Layout.cshtml
+++ b/ErkutPrefabrik/Views/Shared/_Layout.cshtml
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ErkutPrefabrik</title>
-    
+
     <link rel="stylesheet" href="~/css/style-starter.css" asp-append-version="true" />
-    
+
 </head>
 <body>
     @RenderBody()
@@ -24,14 +24,14 @@
                                     <li>
                                         <a href="https://www.facebook.com/ErkutPrefabrik55"><span class="fab fa-facebook-f"></span></a>
                                     </li>
-                                    
+
                                     <li>
                                         <a href="https://www.instagram.com/erkutprefabrik/"><span class="fab fa-instagram"></span></a>
                                     </li>
                                     <li>
                                         <a href="https://t.me/s/sam_kon_vill"><span class="fab fa-telegram-plane"></span></a>
                                     </li>
-                                    
+
 
                                 </ul>
                             </div>
@@ -67,11 +67,11 @@
                                 <li>
                                     <a href="#research"><i class="fas fa-angle-right"></i> Prefabrik Ev</a>
                                 </li>
-                               @* <li>
-                                    <a href="#metal"><i class="fas fa-angle-right"></i> Rent Properties</a>
+                                @* <li>
+                                <a href="#metal"><i class="fas fa-angle-right"></i> Rent Properties</a>
                                 </li>
                                 <li>
-                                    <a href="#metal"><i class="fas fa-angle-right"></i> Property Search</a>
+                                <a href="#metal"><i class="fas fa-angle-right"></i> Property Search</a>
                                 </li>*@
 
 
@@ -99,18 +99,20 @@
 
                             </ul>
                         </div>
-                       
+
                     </div>
                 </div>
+
+
                 <div class="below-section mt-5 pt-lg-3">
                     <div class="copyright-footer">
                         <div class="columns text-start">
                             <p>
                                 © 2023 Erkut Prefabrik Tüm Hakları Saklıdır.
-                                
+
                             </p>
                         </div>
-                        
+
                     </div>
 
                 </div>
@@ -119,7 +121,12 @@
 
         <!-- Js scripts -->
         <!-- move top -->
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/05439453157" style="position:fixed; bottom:0;left:10px;">
+            <img alt="Chat on WhatsApp" style=" width: 80%;margin-bottom: 25px;" src="~/images/small.png" />
+        </a>
         <button onclick="topFunction()" id="movetop" title="Go to top">
+
+
             <span class="fas fa-level-up-alt" aria-hidden="true"></span>
         </button>
         <script>
