--- a/ErkutPrefabrik/Views/Home/Index.cshtml
+++ b/ErkutPrefabrik/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <header id="site-header" class="fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light stroke py-lg-0">
-                <h1><a class="navbar-brand" href="index.html">
+                <h1><a class="navbar-brand" href="index">
                         Erkut<span class="sub-color">Prefabrik</span>
                     </a></h1>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,17 +16,17 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav mx-lg-auto my-2 my-lg-0 navbar-nav-scroll">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Ana Sayfa</a>
+                            <a class="nav-link active" aria-current="page" href="index">Ana Sayfa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">Hakkımızda</a>
+                            <a class="nav-link" href="about">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="services.html">Hizmetlerimiz</a>
+                            <a class="nav-link" href="services">Hizmetlerimiz</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">İletişim</a>
+                            <a class="nav-link" href="contact">İletişim</a>
                         </li>
                     </ul>
                     
@@ -60,7 +60,7 @@
                         <div class="banner-info header-hero-19">
                             <p class="w3hny-tag">Prefabrik Ev Bizim İşimiz</p>
                             <h3 class="title-hero-19">Hayallerinizdeki Evler İçin..</h3>
-                            <a href="about.html" class="btn btn-style btn-primary mt-4">Hakkımızda <i class="fas fa-angle-double-right ms-2"></i></a>
+                            <a href="about" class="btn btn-style btn-primary mt-4">Hakkımızda <i class="fas fa-angle-double-right ms-2"></i></a>
 
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                         <h3 class="title-w3l mb-4">Fiyatları Sabitledik!!</h3>
                         <p class="mt-3 pe-lg-5">Açıklama1.</p>
                         <div class="w3banner-content-btns">
-                            <a href="about.html" class="btn btn-style btn-primary mt-lg-5 mt-4 me-2">Sabit fiyatla satın alın <i class="fas fa-angle-double-right ms-2"></i></a>
+                            <a href="about" class="btn btn-style btn-primary mt-lg-5 mt-4 me-2">Sabit fiyatla satın alın <i class="fas fa-angle-double-right ms-2"></i></a>
 
                         </div>
                     </div>
