--- a/ErkutPrefabrik/Views/Shared/_Layout.cshtml
+++ b/ErkutPrefabrik/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
         <!-- Js scripts -->
         <!-- move top -->
         <a aria-label="Chat on WhatsApp" href="https://wa.me/05439453157" style="position:fixed; bottom:0;left:10px;">
-            <img alt="Chat on WhatsApp" style=" width: 80%;margin-bottom: 25px;" src="~/images/small.png" />
+            <img alt="Chat on WhatsApp" style=" width: 100%;margin-bottom: 25px;" src="~/images/small1.png" />
         </a>
         <button onclick="topFunction()" id="movetop" title="Go to top">
 
