--- a/ErkutPrefabrik/Views/Home/Index.cshtml
+++ b/ErkutPrefabrik/Views/Home/Index.cshtml
@@ -262,7 +262,7 @@
                     <div class="col-lg-4 col-md-6 mt-lg-5 mt-4">
                         <div class="grids-1 box-wrap">
                             <div class="icon">
-                                <i class="fas fa-house-user"></i>
+                                <i class="fas fa-fast-forward"></i>
                             </div>
                             <h4><a href="#service" class="title-head mb-3">Kısa Sürede Evinizi Teslim Ederiz</a></h4>
                             <p class="text-para">Açıklama </p>
