--- a/ErkutPrefabrik/Views/Home/Index.cshtml
+++ b/ErkutPrefabrik/Views/Home/Index.cshtml
@@ -264,7 +264,7 @@
                             <div class="icon">
                                 <i class="fas fa-fast-forward"></i>
                             </div>
-                            <h4><a href="#service" class="title-head mb-3">Kısa Sürede Evinizi Teslim Ederiz</a></h4>
+                            <h4><a href="#service" class="title-head mb-3">Kısa Sürede Evinizi Teslim Edelim</a></h4>
                             <p class="text-para">Açıklama </p>
                         </div>
                     </div>
