--- a/ErkutPrefabrik/Views/Home/Index.cshtml
+++ b/ErkutPrefabrik/Views/Home/Index.cshtml
@@ -251,11 +251,11 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mt-lg-5 mt-4">
                         <div class="grids-1 box-wrap">
-                        <a href="tel:+90-543-947-40-64">
+                        <a href="tel:+90-543-945-31-57">
                             <div class="icon">
                                 <i class="fas fa-phone"></i>
                             </div></a>
-                        <h4><a href="tel:+90-543-947-40-64" class="title-head mb-3">Bizi Arayın, Hemen Randevu Verelim</a></h4>
+                        <h4><a href="tel:+90-543-945-31-57" class="title-head mb-3">Bizi Arayın, Hemen Randevu Verelim</a></h4>
                             <p class="text-para">Açıklama 2 </p>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                             <div class="icon">
                                 <i class="fas fa-fast-forward"></i>
                             </div>
-                            <h4><a href="#service" class="title-head mb-3">Kısa Sürede Evinizi Teslim Edelim</a></h4>
+                            <h4><a href="service" class="title-head mb-3">Kısa Sürede Evinizi Teslim Edelim</a></h4>
                             <p class="text-para">Açıklama </p>
                         </div>
                     </div>
