--- a/ErkutPrefabrik/Views/Home/Index.cshtml
+++ b/ErkutPrefabrik/Views/Home/Index.cshtml
@@ -66,6 +66,18 @@
                     </div>
                 </div>
             </div>
+            <div class="item">
+                <div class="slider-info banner-view banner-top2">
+                    <div class="container">
+                        <div class="banner-info header-hero-19">
+
+                            <p class="w3hny-tag">Bir Telefon Uzağınızdayız.</p>
+                            <h3 class="title-hero-19">Siz Hayal Edin Biz Yapalım</h3>
+                            <a href="about" class="btn btn-style btn-primary mt-4">Daha Fazla <i class="fas fa-angle-double-right ms-2"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
         </div>
@@ -273,6 +285,22 @@
         </div>
     </section>
     <!--//features section -->
+<section class="w3l-stats-section py-5" id="stats">
+    <div class="container py-md-4">
+        <div class="w3l-stats-inner-inf">
+            <div class="row stats-con justify-content-center">
+                <div class="col-lg-3 col-6 stats_info counter_grid">
+                    <p class="counter">30 </p>
+                    <h3>Tamamlanan Prefabrik Ev</h3>
+                </div>
+                <div class="col-lg-3 col-6 stats_info counter_grid">
+                    <p class="counter">20 </p>
+                    <h3>Konteyner Satışı</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     <!--/properties-->
     <section class="locations-1" id="locations">
         <div class="locations py-5">
@@ -634,6 +662,7 @@
         </div>
     </section>
     <!--//properties-->
+
     <!--/w3l-join-main-->
     <section class="w3l-join-main py-5">
         <div class="container py-md-5">
