--- a/ErkutPrefabrik/Views/Home/About.cshtml
+++ b/ErkutPrefabrik/Views/Home/About.cshtml
@@ -25,7 +25,10 @@
                         <a class="nav-link active" href="about">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services">Hizmetlerimiz</a>
+                        <a class="nav-link" href="Prefabrik">Prefabrik</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Celikev">Çelik Ev</a>
                     </li>
 
                     <li class="nav-item">
@@ -265,15 +268,15 @@
         <div class="w3l-stats-inner-inf">
             <div class="row stats-con justify-content-center">
                 <div class="col-lg-3 col-6 stats_info counter_grid">
-                    <p class="counter">30 </p>
+                    <p class="counter">120 </p>
                     <h3>Tamamlanan Prefabrik Ev</h3>
                 </div>
                 <div class="col-lg-3 col-6 stats_info counter_grid">
-                    <p class="counter">20 </p>
-                    <h3>Konteyner Satışı</h3>
+                    <p class="counter">150 </p>
+                    <h3>Betonarme Satışı</h3>
                 </div>
                 <div class="col-lg-3 col-6 stats_info counter_grid mt-lg-0 mt-4">
-                        <p class="counter">100</p>
+                        <p class="counter">500</p>
                         <h3>Mutlu Müşteriler</h3>
                     </div>
             </div>
