--- a/ErkutPrefabrik/Views/Home/Contact.cshtml
+++ b/ErkutPrefabrik/Views/Home/Contact.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link" href="about">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="services">Hizmetlerimiz</a>
+                            <a class="nav-link" href="Prefabrik">Prefabrik</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Celikev">Çelik Ev</a>
                         </li>
 
                         <li class="nav-item  active">
