--- a/ErkutPrefabrik/wwwroot/css/style-liberty.css
+++ b/ErkutPrefabrik/wwwroot/css/style-liberty.css
@@ -18835,7 +18835,7 @@ a.dropdown-item.active {
     background: url(../images/banner.jpg) no-repeat center;
     -ms-background-size: cover;
     background-size: cover;
-    z-index: 0;
+    
     position: relative;
     display: grid;
     align-items: center;
@@ -18849,14 +18849,90 @@ a.dropdown-item.active {
 }
 
 .w3l-main-slider .banner-top3 {
-    background: url(../images/banner3.jpg) no-repeat center;
-    background-size: cover;
+    background: url(../images/1/1.jpg) no-repeat center;
+    background-size:  contain;
 }
 
 .w3l-main-slider .banner-top4 {
-    background: url(../images/banner4.jpg) no-repeat center;
-    background-size: cover;
+    background: url(../images/1/2.jpg) no-repeat center;
+    
+    background-size: contain;
 }
+.w3l-main-slider .banner-top5 {
+    background: url(../images/1/3.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top6 {
+    background: url(../images/1/4.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top7 {
+    background: url(../images/1/5.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top8 {
+    background: url(../images/1/6.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top9 {
+    background: url(../images/1/7.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top10 {
+    background: url(../images/1/8.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top11 {
+    background: url(../images/2/1.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top12 {
+    background: url(../images/2/2.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top13{
+    background: url(../images/2/3.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top14 {
+    background: url(../images/2/4.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top15 {
+    background: url(../images/2/5.jpg) no-repeat center;
+    background-size: contain;
+}
+.w3l-main-slider .banner-top16 {
+    background: url(../images/2/6.jpg) no-repeat center;
+    background-size: contain;
+}.w3l-main-slider .banner-top17 {
+    background: url(../images/4/4.jpg) no-repeat center;
+    background-size: contain;
+}.w3l-main-slider .banner-top18 {
+    background: url(../images/4/2.jpg) no-repeat center;
+    background-size: contain;
+}.w3l-main-slider .banner-top19 {
+    background: url(../images/4/3.jpg) no-repeat center;
+    background-size: contain;
+}.w3l-main-slider .banner-top20 {
+    background: url(../images/4/1.jpg) no-repeat center;
+    background-size: contain;
+}.w3l-main-slider .banner-top21 {
+    background: url(../images/4/5.jpg) no-repeat center;
+    background-size: contain;
+}.w3l-main-slider .banner-top22 {
+    background: url(../images/4/6.jpg) no-repeat center;
+    background-size: contain;
+}.w3l-main-slider .banner-top23 {
+    background: url(../images/4/7.jpg) no-repeat center;
+    background-size: contain;
+}.w3l-main-slider .banner-top24 {
+    background: url(../images/4/8.jpg) no-repeat center;
+    background-size: contain;
+}
+
+
+
 
 .w3l-main-slider .banner-view:before {
     content: "";
@@ -19120,7 +19196,7 @@ p.w3ban-para {
 }
 
 .owl-carousel.owl-loading {
-    opacity: 0;
+    opacity: 1;
     display: block;
 }
 
@@ -23201,6 +23277,7 @@ section.footer-inner-main {
         font-size: 25px;
     }
 }
+
 
 /*--//Footer-9--*/
 /*# sourceMappingURL=style-freedom.css.map */
